--- a/alfresco-cloud-example/pom.xml
+++ b/alfresco-cloud-example/pom.xml
@@ -17,7 +17,7 @@
     </plugins>
   </build>
   <repositories>
-  <repository>
+      <repository>
         <id>google-releases</id>
         <name>Google Releases</name>
         <url>https://oss.sonatype.org/content/repositories/google-releases</url>
@@ -26,7 +26,12 @@
          <id>artifacts.alfresco.com</id>
          <name>Alfresco Maven Repository</name>
          <url>https://artifacts.alfresco.com/nexus/content/groups/public/</url>
-    </repository>      
+      </repository> 
+      <repository>
+    	<id>repository.apache.org</id>
+    	<name>Apache Maven Repository</name>
+    	<url>https://repository.apache.org/content/groups/public/</url>
+      </repository>     
   </repositories>
   <dependencies>
   	<dependency>
