--- a/alfresco-api-examples/pom.xml
+++ b/alfresco-api-examples/pom.xml
@@ -39,6 +39,11 @@
   		<artifactId>google-oauth-client</artifactId>
   		<version>1.16.0-rc</version>
   	</dependency>
+    <dependency>
+		<groupId>com.google.http-client</groupId>
+		<artifactId>google-http-client-jackson</artifactId>
+		<version>1.16.0-rc</version>
+	</dependency>
   	<dependency>
   		<groupId>javax.servlet</groupId>
   		<artifactId>servlet-api</artifactId>
@@ -58,7 +63,7 @@
   	<dependency>
   		<groupId>org.apache.chemistry.opencmis</groupId>
   		<artifactId>chemistry-opencmis-client-impl</artifactId>
-  		<version>0.9.0</version>
+  		<version>0.10.0</version>
   	</dependency>
   	<dependency>
   		<groupId>org.alfresco.cmis.client</groupId>
